--- a/index.html
+++ b/index.html
@@ -580,6 +580,40 @@ right: 5%;
 left: 5%;
 }
 }
+  @media (max-width: 768px) {
+  body {
+    font-size: 14px;
+    padding: 10px;
+  }
+
+  .chat-container, .distraction-box, .cloud-worries, .story-section {
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    flex-direction: column;
+  }
+
+  input[type="text"], button {
+    width: 100%;
+    margin-top: 8px;
+  }
+
+  canvas {
+    width: 100% !important;
+    height: auto !important;
+  }
+
+  #musicPlayer {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .song {
+    width: 100%;
+    text-align: center;
+  }
+}
+
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
